--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
+    "date-fns": "^2.29.3",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.4.0",
@@ -56,12 +57,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.1",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.8",
     "jest-date-mock": "^1.0.8",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.4.2",
